[gd_scene load_steps=7 format=3 uid="uid://cn8nhbabuan7q"]

[ext_resource type="Script" uid="uid://b3is0xbf70ux5" path="res://scenes/game/game.gd" id="1_lbhrr"]
[ext_resource type="PackedScene" uid="uid://l51dn7umm8ap" path="res://scenes/game/stage.tscn" id="1_yqjtg"]
[ext_resource type="PackedScene" uid="uid://c3dkho2rr6a5v" path="res://scenes/unit_parade/unit_parade.tscn" id="3_lnu2h"]
[ext_resource type="PackedScene" uid="uid://b5qni41p8gxb5" path="res://scenes/captured_unit_spawner/captured_unit_spawner.tscn" id="4_lbhrr"]
[ext_resource type="PackedScene" uid="uid://cc8758x5ep2hy" path="res://scenes/enemy_spawner.tscn" id="5_5i0tg"]
[ext_resource type="PackedScene" uid="uid://bhxb67bmk80a0" path="res://scenes/enemies/basic_enemy.tscn" id="5_lfrn8"]

[node name="Game" type="Node2D"]
script = ExtResource("1_lbhrr")

[node name="Stage" parent="." instance=ExtResource("1_yqjtg")]

[node name="UnitParade" parent="." instance=ExtResource("3_lnu2h")]

[node name="SpawnCapturedUnitTimer" type="Timer" parent="."]

[node name="CapturedUnitSpawner" parent="." instance=ExtResource("4_lbhrr")]

[node name="EnemySpawner" parent="." instance=ExtResource("5_5i0tg")]

[node name="BasicEnemy" parent="EnemySpawner" instance=ExtResource("5_lfrn8")]
position = Vector2(132, 145)

[node name="BasicEnemy2" parent="EnemySpawner" instance=ExtResource("5_lfrn8")]
position = Vector2(-101, -173)

[node name="BasicEnemy3" parent="EnemySpawner" instance=ExtResource("5_lfrn8")]
position = Vector2(-132, 119)

[node name="ProjectileContainer" type="Node" parent="."]

[connection signal="child_entered_tree" from="CapturedUnitSpawner" to="." method="_on_captured_unit_spawner_child_entered_tree"]
